scss/layouts/sidebar/_instructions.scss
.game {
  &__instructions {
    visibility: visible;

    position: fixed;
    top: 50%;
    left: 50%;

    width: em(1000px);

    margin-left: em(-500px);
    padding: em(76px) em(180px) em(85px);

    border: 1px solid #6D7579;
    background-color: #272C2E;

    opacity: 0.9;

    box-shadow: 0 0 30px 5px rgba(255, 255, 255, 0.02);
    border-radius: em(5px);

    transform: translateY(-50%);

    animation: confirmShowing 0.2s ease;

    z-index: 100;

    @include breakpoint-tablet {
      @include portraitOrientation() {
        width: 80%;

        margin-left: -40%;
        padding: 10% 12% 3%;
      }
    }
    @include breakpoint-mobile {
      width: 90%;

      margin-left: -45%;
      padding: 10% 12% 2%;
    }
    @keyframes confirmShowing {
      0% {
        opacity: 0;
      }
      100% {
        opacity: 1;
      }
    }
    &-title {
      margin-bottom: em(15px, 14px);

      font-family: $font-stack-avenir-roman;
      font-size: em(14px);
      font-weight: bold;
      color: #fff;
      text-transform: uppercase;
      letter-spacing: 0.2em;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          margin-bottom: 2%;

          font-size: 18px;
        }
      }
      @include breakpoint-mobile {
        margin-bottom: 2%;

        font-size: 10px;
      }
      &--general {
        font-size: em(36px);
        text-align: center;

        @include breakpoint-tablet {
          @include portraitOrientation() {

            font-size: 28px;
          }
        }
        @include breakpoint-mobile {
          font-size: 18px;
        }

        &:after {
          content: "";

          display: block;

          width: em(117px, 36px);
          height: em(4px, 36px);

          margin: 0 auto;
          margin-top: em(15px, 36px);
          margin-bottom: em(25px, 36px);

          background-color: #3d4042;

          @include breakpoint-tablet {
            @include portraitOrientation() {
              width: 40%;
              height: 3px;

              margin-top: 5%;
              margin-bottom: 5%;
            }
          }
          @include breakpoint-mobile {
            width: 40%;
            height: 2px;

            margin-top: 5%;
            margin-bottom: 5%;
          }
        }
      }
    }
    &-text {
      font-family: $font-stack-avenir-roman;
      font-size: em(16px);
      color: #939596;
      line-height: 1.35;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          font-size: 16px;
        }
      }
      @include breakpoint-mobile {
        font-size: 10px;
      }
      span {
        font-weight: bold;
        font-style: italic;
      }
      &--general {
        width: em(375px, 16px);

        margin: 0 auto;
        margin-bottom: em(95px, 16px);

        text-align: center;

        @include breakpoint-tablet {
          @include portraitOrientation() {
            width: 100%;

            margin-bottom: 15%;

            font-size: 16px;
          }
        }
        @include breakpoint-mobile {
          width: 100%;

          margin-bottom: 15%;

          font-size: 10px;
        }
      }
    }
    &-moving {
      float: left;
      position: relative;

      width: 45%;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          width: 100%;
        }
      }
      @include breakpoint-mobile {
        width: 100%;
      }
      &-tiles {
        position: relative;
        top: 0;
        left: 0;
        margin-top: em(75px);

        @include breakpoint-tablet {
          @include portraitOrientation() {
            display: inline-block;

            width: 50%;
            height: auto;

            margin-top: 12%;
            margin-bottom: 10%;
            padding: 1%;

            border-radius: 5px;
          }
        }
        @include breakpoint-mobile {
          display: inline-block;

          width: 50%;
          height: auto;

          margin-top: 12%;
          margin-bottom: 4%;
          padding: 1%;

          border-radius: 5px;
        }
      }
      &-tile {
        float: left;
        display: block;

        margin-right: em(5px);
        padding: em(5px);

        width: em(41px);
        height: em(41px);

        border: 1px solid #565859;
        border-radius: em(7px);

        &:last-child {
          margin-right: 0;
        }
        @include breakpoint-tablet {
          @include portraitOrientation() {
            width: 10%;
            height: auto;

            margin-right: 2%;
            padding: 8%;

            border-radius: 5px;
          }
        }
        @include breakpoint-mobile {
          width: 10%;
          height: auto;

          margin-right: 2%;
          padding: 8%;

          border-radius: 5px;
        }
        &--left {
          background: url('../images/arrow-up.png') no-repeat 50% 50%;

          transform: rotate(-90deg);
        }
        &--right {
          background: url('../images/arrow-up.png') no-repeat 50% 50%;

          transform: rotate(90deg);
        }
        &--down {
          background: url('../images/arrow-up.png') no-repeat 50% 50%;

          transform: rotate(-180deg);
        }
        &--up {
          position: absolute;
          top: em(-45px);
          left: em(45px);
          
          background: url('../images/arrow-up.png') no-repeat 50% 50%;

          @include breakpoint-tablet {
            @include portraitOrientation() {
              top: -79%;
              left: 20%;
            }
          }
          @include breakpoint-mobile {
            top: -85%;
            left: 21%;
          }
        }
      }
    }
    &-earning {
      margin-left: 55%;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          width: 100%;

          margin-left: 0;
        }
      }
      @include breakpoint-mobile {
        width: 100%;

        margin-left: 0;
      }
      &-tiles {
        display: block;

        height: em(52px);
        width: em(145px);

        margin-top: em(45px);
        margin-bottom: em(15px);
        padding: em(5px);
        padding-right: 0;

        border: 1px solid #939596;

        border-radius: em(7px);

        @include breakpoint-tablet {
          @include portraitOrientation() {
            display: inline-block;

            width: 28%;
            height: auto;

            margin-top: 5%;
            margin-bottom: 2%;
            padding: 1%;

            border-radius: 5px;
          }
        }
        @include breakpoint-mobile {
          display: inline-block;

          width: 28%;
          height: auto;

          margin-top: 5%;
          margin-bottom: 2%;
          padding: 1%;

          border-radius: 5px;
        }
      }
      &-tile {
        float: left;
        display: block;

        margin-right: em(5px);
        padding: em(5px);

        width: em(41px);
        height: em(41px);

        border: 1px solid #565859;
        border-radius: em(7px);

        &:last-child {
          margin-right: 0;
        }
        @include breakpoint-tablet {
          @include portraitOrientation() {
            width: 32%;
            height: auto;

            margin-right: 2%;
            padding: 14%;

            border-radius: 5px;
          }
        }
        @include breakpoint-mobile {
          width: 32%;
          height: auto;

          margin-right: 2%;
          padding: 14%;

          border-radius: 5px;
        }
      }
    }
    &-score {
      margin-bottom: em(15px);

      font-family: $font-stack-avenir-roman;
      font-size: em(14px);
      color: #939596;
      text-transform: uppercase;
      line-height: 1.35;
      letter-spacing: 0.2em;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          display: block;

          margin-bottom: 10%;

          font-size: 14px;
        }
      }
      @include breakpoint-mobile {
        display: block;

        margin-bottom: 2%;

        font-size: 8px;
      }
    }
    &-button {
      position: relative;
      bottom: em(-35px);
      left: 50%;

      width: em(80px);
      height: em(35px);

      margin-left: em(-40px);

      border: 1px solid rgba(84, 158, 201, 0.50);
      background-color: rgba(84, 158, 201, 0.10);

      color: #42748f;
      font-family: $font-stack-avenir-roman;
      font-size: em(18px);
      text-transform: lowercase;
      text-align: center;
      line-height: 1;

      border-radius: em(6px);

      cursor: pointer;

      transition: background-color ease 0.3s, color ease 0.3s;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          width: 20%;
          height: auto;

          bottom: 0;
          left: 50%;

          margin-bottom: 0;
          margin-left: -10%;
          padding: 2% 5%;

          font-size: 18px;

          transition: none;

          &:hover {
            border: 1px solid rgba(84, 158, 201, 0.50);
            background-color: rgba(84, 158, 201, 0.10);

            color: #42748f;
          }
        }
      }
      @include breakpoint-mobile {
        width: 20%;
        height: auto;

        bottom: 0;
        left: 50%;

        margin-bottom: 0;
        margin-left: -10%;
        padding: 2% 5%;

        font-size: 12px;

        transition: none;

        &:hover {
          border: 1px solid rgba(84, 158, 201, 0.50);
          background-color: rgba(84, 158, 201, 0.10);

          color: #42748f;
        }
      }
      &:hover {
        background-color: #42748f;

        color: #fff;
      }
    }
  }
}

